Add cde